# OOP_3Uzduotis

./: .gitignore  CMakeLists.txt  FileInput.cpp  README.md
ArrayImplementation/: MainArray.cpp
Main/: ConsoleInput.cpp  ConsoleOutput.cpp  FileInput.cpp  GenerateTestFile.cpp  InfoFromConsole.cpp  InfoFromFile.cpp  InfoFromRNG.cpp  Main.cpp  MathFunctions.cpp  Menu.cpp  RandomInput.cpp  StudentaiInfo.cpp  TestFileRead.cpp  TestFileWrite.cpp  Tests.cpp
Main/Catch/: catch.hpp  unitTests.cpp
Main/Headers/: ConsoleInput.h  ConsoleOutput.h  FileInput.h  GenerateTestFile.h  InfoFromConsole.h  InfoFromFile.h  InfoFromRNG.h  MathFunctions.h  Menu.h  (+6 more)
html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _generate_test_file_8cpp.html  _generate_test_file_8cpp.js  _generate_test_file_8cpp_source.html  _generate_test_file_8h.html  _generate_test_file_8h.js  _generate_test_file_8h_source.html  _info_from_file_8cpp.html  _info_from_file_8cpp.js  _info_from_file_8cpp_source.html  _info_from_file_8h.html  _info_from_file_8h.js  _info_from_file_8h_source.html  _main_8cpp.html  _main_8cpp.js  _main_8cpp_source.html  _menu_8cpp.html  _menu_8cpp.js  _menu_8cpp_source.html  _menu_8h.html  _menu_8h.js  _menu_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _studentai_info_8cpp.html  _studentai_info_8cpp.js  _studentai_info_8cpp_source.html  _studentai_info_8h.html  _studentai_info_8h.js  _studentai_info_8h_source.html  _test_file_read_8cpp.html  _test_file_read_8cpp.js  _test_file_read_8cpp_source.html  _test_file_read_8h.html  _test_file_read_8h.js  _test_file_read_8h_source.html  _test_file_write_8cpp.html  (+213 more)
(+49 files in other folders)
